// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser function declarations parses functions with default argument expressions 1`] = `
Array [
  Function {
    "body": Block {
      "statements": Array [],
    },
    "name": Object {
      "kind": 21,
      "line": 1,
      "text": "add",
    },
    "parameters": Array [
      Object {
        "defaultValue": Literal {
          "value": Int32 {
            "kind": 3,
            "value": 3,
          },
        },
        "name": "a",
        "type": 8,
      },
      Object {
        "defaultValue": Literal {
          "value": Int32 {
            "kind": 3,
            "value": 4,
          },
        },
        "name": "b",
        "type": 8,
      },
      Object {
        "defaultValue": Binary {
          "left": Variable {
            "name": Object {
              "kind": 21,
              "line": 1,
              "text": "a",
            },
          },
          "right": Literal {
            "value": Int32 {
              "kind": 3,
              "value": 5,
            },
          },
          "token": Object {
            "kind": 8,
            "line": 1,
            "text": "+",
          },
        },
        "name": "c",
        "type": 8,
      },
    ],
  },
]
`;

exports[`parser function declarations parses functions with implicit-dynamic arguments 1`] = `
Array [
  Function {
    "body": Block {
      "statements": Array [],
    },
    "name": Object {
      "kind": 21,
      "line": 1,
      "text": "add2",
    },
    "parameters": Array [
      Object {
        "defaultValue": undefined,
        "name": "a",
        "type": 8,
      },
      Object {
        "defaultValue": undefined,
        "name": "b",
        "type": 8,
      },
    ],
  },
]
`;

exports[`parser function declarations parses functions with typed arguments 1`] = `
Array [
  Function {
    "body": Block {
      "statements": Array [],
    },
    "name": Object {
      "kind": 21,
      "line": 1,
      "text": "repeat",
    },
    "parameters": Array [
      Object {
        "defaultValue": undefined,
        "name": "str",
        "type": 2,
      },
      Object {
        "defaultValue": undefined,
        "name": "count",
        "type": 3,
      },
    ],
  },
]
`;

exports[`parser function declarations parses minimal empty function declarations 1`] = `
Array [
  Function {
    "body": Block {
      "statements": Array [],
    },
    "name": Object {
      "kind": 21,
      "line": 1,
      "text": "foo",
    },
    "parameters": Array [],
  },
]
`;

exports[`parser sub declarations parses minimal sub declarations 1`] = `
Array [
  Function {
    "body": Block {
      "statements": Array [],
    },
    "name": Object {
      "kind": 21,
      "line": 1,
      "text": "bar",
    },
    "parameters": Array [],
  },
]
`;

exports[`parser sub declarations parses subs with default argument expressions 1`] = `
Array [
  Function {
    "body": Block {
      "statements": Array [],
    },
    "name": Object {
      "kind": 21,
      "line": 1,
      "text": "add",
    },
    "parameters": Array [
      Object {
        "defaultValue": Literal {
          "value": Int32 {
            "kind": 3,
            "value": 3,
          },
        },
        "name": "a",
        "type": 8,
      },
      Object {
        "defaultValue": Literal {
          "value": Int32 {
            "kind": 3,
            "value": 4,
          },
        },
        "name": "b",
        "type": 8,
      },
      Object {
        "defaultValue": Binary {
          "left": Variable {
            "name": Object {
              "kind": 21,
              "line": 1,
              "text": "a",
            },
          },
          "right": Literal {
            "value": Int32 {
              "kind": 3,
              "value": 5,
            },
          },
          "token": Object {
            "kind": 8,
            "line": 1,
            "text": "+",
          },
        },
        "name": "c",
        "type": 8,
      },
    ],
  },
]
`;

exports[`parser sub declarations parses subs with implicit-dynamic arguments 1`] = `
Array [
  Function {
    "body": Block {
      "statements": Array [],
    },
    "name": Object {
      "kind": 21,
      "line": 1,
      "text": "add2",
    },
    "parameters": Array [
      Object {
        "defaultValue": undefined,
        "name": "a",
        "type": 8,
      },
      Object {
        "defaultValue": undefined,
        "name": "b",
        "type": 8,
      },
    ],
  },
]
`;

exports[`parser sub declarations parses subs with typed arguments 1`] = `
Array [
  Function {
    "body": Block {
      "statements": Array [],
    },
    "name": Object {
      "kind": 21,
      "line": 1,
      "text": "repeat",
    },
    "parameters": Array [
      Object {
        "defaultValue": undefined,
        "name": "str",
        "type": 2,
      },
      Object {
        "defaultValue": undefined,
        "name": "count",
        "type": 3,
      },
    ],
  },
]
`;
